# datahack-2026-stark-mind

./: .gitignore  .gitmodules  CLAUDE.md  README.md  backlog.md  data-models.md  miro-research-phase.md  pitch-stark-mind-demo-y-qa.md  softserve-analisis-reto3.md  softserve-analisis-reto3.txt
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: _paper_schema.py  _project_brief.py  arxiv_client.py  citation_guard.py  discovery.py  events.py  llm_providers.py  orchestrator.py  pdf_preprocessor.py  pipeline.py  reader.py  synthesizer.py  telemetry.py
backend/app/agents/extractor/: __init__.py  graph.py  nodes.py  prompts.py
backend/app/api/: deps.py
backend/app/api/routers/: extractions.py  health.py  latent.py  models.py  projects.py  queries.py
backend/app/core/: config.py  db.py
backend/app/db/: models.py  schemas.py
backend/app/services/: chat.py  gemini.py  latent_map.py  synthetic_papers.py
backend/scripts/: extract_figures.py  run_extractor.py
backend/scripts/fixtures/: agentic-rag.extraction.json  agentic-rag.summary.json  react.extraction.json  react.summary.json
db/: schema.sql  seed.sql
docs/: Información equipos.xlsx  Manual Usuario VPN y Open OnDemand para BRAVO-HPC.docx  Recomendaciones para presentaciones (pitch).docx  Reglamento DataHack.docx  Reto 3_ Instrucciones Detalladas.docx  Rúbrica de evaluación DataHack.docx
